@@ -2,6 +2,7 @@ Revision history for Data::Text
 
 0.19
 	Try harder to handle non-English LANGUAGE setting (RT#168965)
+	Use Object::Configure
 		
 0.18	Mon Aug 11 11:24:22 EDT 2025
 	Bump the version of Params::Get
